Timer project select.

--- a/app/views/timer/_clock_face.html.erb
+++ b/app/views/timer/_clock_face.html.erb
@@ -7,25 +7,14 @@
   <%= form_with(model: @timer, url: timer_path, data: {controller: 'form'}) do |form| %>
 
     <%= form.text_field :name,
-      data: { target: 'clock.name' },
-      placeholder: 'Activity' %>
+        data: { target: 'clock.name' },
+        placeholder: 'Activity' %>
 
-    <%= form.number_field :project_id,
-      data: { target: 'clock.project' },
-      placeholder: 'Project' %>
+    <%= form.select :project_id, @project_options, {},
+        data: { target: 'clock.project' } %>
 
-    <% if @timer.persisted? %>
-
-      <button type="submit">
-          <%= octicon 'pin' %>
-      </button>
-
-    <% else %>
-
-      <button type="submit">
-          <%= octicon 'play' %>
-      </button>
-
+    <% unless @timer.persisted? %>
+      <button type="submit"><%= octicon 'play' %></button>
     <% end %>
 
   <% end %>
