--- a/app/views/timer/index.html.erb
+++ b/app/views/timer/index.html.erb
@@ -8,6 +8,8 @@
     </div>
   </div>
 
-  <%= render 'report' %>
+  <div id="activity-report">
+    <%= render 'activity_report' %>
+  </div>
 
 </div>
