--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
 
     <title><%= page_title %></title>
     <meta name="description" content="<%= page_title %>"/>
+
+    <%= action_cable_meta_tag %>
     <meta name="current-user" id="<%= current_user.try(:id) %>">
 
     <%= csrf_meta_tags %>
