--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,5 +1,10 @@
-<%= form_with(model: @project, data: {controller: 'form'}) do |form| %>
-  <%= form.hidden_field :client_id, value: @project.client_id %>
+<%= form_with(
+      model: @project,
+      url: (@project.persisted? ?
+        project_path(@project) :
+        client_projects_path(@project.client)),
+      data: {controller: 'form'}
+    ) do |form| %>
 
   <div class="row my-2">
     <div class="col-sm-auto">
@@ -32,7 +37,7 @@
       value="Add project"
       class="btn btn-secondary my-1 mr-1">
 
-    <%= link_to 'Cancel', client_path(@project.client_id),
+    <%= link_to 'Cancel', client_path(@project.client),
       class: 'btn btn-secondary my-1 mr-1'
     %>
 
