--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -15,7 +15,8 @@
         <%= link_to('Users', admin_users_path, class: 'nav-link') %>
       <% end %>
 
-      <%= link_to('Account', edit_user_registration_path,
+      <%= link_to(current_user.display_name.truncate(8),
+                  edit_user_registration_path,
                   class: 'nav-link') %>
       <%= link_to('Logout', destroy_user_session_path,
                   method: :delete, class: 'nav-link') %>
