Better clock icons.

--- a/app/javascript/stylesheets/variables.scss
+++ b/app/javascript/stylesheets/variables.scss
@@ -3,6 +3,11 @@
 $headers: #aaaaaa;
 $label: $headers;
 
+$logo-gold: #ffd700;
+$logo-red: #ff0000;
+$logo-green: #00bb00;
+$logo-blue: #6666ff;
+
 $sep: 10px;
 $sep5: 5px;
 $left-nav-width: 90px;
