Improved page layout.

--- a/app/javascript/stylesheets/variables.scss
+++ b/app/javascript/stylesheets/variables.scss
@@ -10,10 +10,12 @@ $logo-blue: #6666ff;
 
 $sep: 10px;
 $sep5: 5px;
+
 $left-nav-width: 90px;
 $top-nav-height: 70px;
+
 $page-margin: $sep;
-$content-margin: $sep;
+$content-padding: $sep;
 
 // Customize Bootstrap variables.
 $secondary: $headers;
