--- a/app/javascript/stylesheets/views/page-layout.scss
+++ b/app/javascript/stylesheets/views/page-layout.scss
@@ -9,8 +9,6 @@ $nav-color: #ddd;
 
 .page-layout {
   display: flex;
-  margin-right: $page-margin;
-  margin-left: $page-margin;
   position: relative;
 
   .nav-space {
@@ -34,9 +32,25 @@ $nav-color: #ddd;
     }
   }
 
-  .content-panel {
-    padding-left: $content-padding;
+  .page-right {
     width: 100%;
-  }
 
+    .top-menu {
+      height: $top-nav-height;
+      width: 100%;
+      padding: $sep;
+      background-color: white;
+      box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.13);
+
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    .content-panel {
+      padding: $sep2 $sep $sep $sep;
+      width: 100%;
+    }
+
+  }
 }
