--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,8 +1,14 @@
 <% @page_title = 'Clients' %>
-<%= render 'layouts/page-top' %>
 
-<%= link_to 'New client', new_client_path, class: 'd-block mb-2' %>
+<nav class="top-menu">
+  <span class="lead"><%= page_header %></span>
+  <%= render 'layouts/alerts' %>
+  <%= link_to 'New client', new_client_path %>
+</nav>
 
-<% @clients.each do |client| %>
-  <%= link_to client.display_name, client_path(client), class: 'd-block mb-2' %>
-<% end %>
+<div class="content-panel">
+  <% @clients.each do |client| %>
+    <%= link_to client.display_name, client_path(client),
+        class: 'd-block mb-2' %>
+  <% end %>
+</div>
