--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
         </div>
       </div>
 
-      <div class="content-panel">
+      <div class="page-right">
         <%= yield %>
       </div>
 
