--- a/app/views/timer/index.html.erb
+++ b/app/views/timer/index.html.erb
@@ -3,8 +3,10 @@
 <div class="timer-page">
 
   <div class="clock-space">
-    <div id="clock-face" class="clock-face">
-      <%= render 'clock_face' %>
+    <div class="top-menu">
+      <div id="clock-face" class="clock-face">
+        <%= render 'clock_face' %>
+      </div>
     </div>
   </div>
 
