--- a/app/javascript/stylesheets/views/page-layout.scss
+++ b/app/javascript/stylesheets/views/page-layout.scss
@@ -36,13 +36,13 @@ $nav-color: #ddd;
     width: 100%;
 
     .top-menu {
-      height: $top-nav-height;
       width: 100%;
+      height: $top-nav-height;
       padding: $sep;
-      background-color: white;
       box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.13);
 
       display: flex;
+      flex-wrap: wrap;
       align-items: center;
       justify-content: space-between;
     }
