--- a/app/javascript/stylesheets/views/timer-page.scss
+++ b/app/javascript/stylesheets/views/timer-page.scss
@@ -5,30 +5,23 @@
 @import '../variables';
 
 $img-height: 20px;
+$day-height: 60px;
+$line-highlight: #f4f4f4;
 
 .timer-page {
 
   .clock-space {
     height: $top-nav-height;
 
-    .clock-face {
+    .top-menu {
       position: fixed;
       top: 0;
       left: $left-nav-width;
-
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-
-      width: 100%;
-      height: $top-nav-height;
       background-color: white;
-      box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.13);
 
       #clock-works {
         display: flex;
         flex-wrap: wrap;
-        padding: $content-padding;
 
         #ticker {
           margin-left: $sep;
@@ -59,5 +52,67 @@ $img-height: 20px;
         }
       }
     }
+  }
+
+  #activity-report {
+
+    .all-day {
+      border-bottom: 30px solid $line-highlight;
+    }
+
+    %line {
+      height: $day-height;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 $sep;
+
+    }
+
+    .day-line {
+      @extend %line;
+      font-weight: 600;
+    }
+
+    .task-line {
+      @extend %line;
+      box-shadow: rgb(232, 232, 232) 0px -1px 0px 0px inset;
+
+      &:hover {
+        background-color: $line-highlight;
+      }
+    }
+
+    .inline-center {
+      display: inline-flex;
+      align-items: center;
+    }
+
+    .session-box {
+      @extend .inline-center;
+      height: 30px;
+      width: 30px;
+      margin: $sep;
+    }
+
+    .session-count {
+      @extend .session-box;
+      justify-content: center;
+      color: $label;
+      border: 1px solid #ddd;
+      border-radius: 25%;
+    }
+
+    .length-box {
+      @extend .inline-center;
+      justify-content: flex-end;
+      width: 90px;
+    }
+
+    .start-finish {
+      color: $label;
+      @extend .inline-center;
+    }
+
   }
 }
