--- a/app/views/timer/index.html.erb
+++ b/app/views/timer/index.html.erb
@@ -10,7 +10,9 @@
     </div>
   </div>
 
-  <div id="activity-report">
+  <div id="activity-report"
+    data-controller="activity"
+    data-activity-debug="on">
     <%= render 'activity_report' %>
   </div>
 
