Become Guest Account or any user.

--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -8,5 +8,10 @@
 
   <%= link_to "Edit", edit_admin_user_path(@user) %> |
   <%= link_to "Back", admin_users_path %>
+  <% if is_admin? %>
+    | <%= link_to "Become #{@user.display_name}", become_admin_user_path(@user),
+          method: :post, remote: true %>
+  <% end %>
 
-  <p><%= button_to "Delete User", admin_user_path(@user), data: { confirm: "Are you sure?" }, method: :delete %></p>
+  <p><%= button_to "Delete User", admin_user_path(@user),
+         data: { confirm: "Are you sure?" }, method: :delete %></p>
