--- a/app/views/timer/index.html.erb
+++ b/app/views/timer/index.html.erb
@@ -12,7 +12,7 @@
 
   <div id="activity-report"
     data-controller="activity"
-    data-activity-debug="on">
+    data-activity-debug="off">
     <%= render 'activity_report' %>
   </div>
 
