--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,12 +1,31 @@
 <% @page_title = 'Welcome to Activity Timer' %>
-<%= render 'layouts/page-top' %>
 
-<div class="welcome-page">
+<nav class="top-menu">
+  <span class="lead"><%= page_header %></span>
+  <%= render 'layouts/alerts' %>
+</nav>
 
-  <script>
-    $(() => { $('#jquery-test').html('jQuery is working!') })
-  </script>
+<div class="content-panel">
 
-  <p id="jquery-test" class="text-primary">jQuery is not working.</p>
+  <p>This is a personal activity timer built for the fun of it.</p>
+
+  <% if current_user.try(:email) != 'guest@guest.com' %>
+    <p>Check it out as the
+      <%= link_to guest_welcome_index_path, method: :post, remote: true do %>
+        <button class="btn btn-sm btn-outline-success">Guest Account</button>
+      <% end %>
+      user.
+    </p>
+  <% else %>
+    <p>You are logged in as the Guest Account user!</p>
+  <% end %>
+
+  <p>
+    As the Guest Account user you can see some sample history data
+    and run a timer. You will be sharing the timer and sample data
+    with anyone else who is logged in as the Guest Account user.
+    At the end of the day, the sample data will be cleared out
+    and recreated.
+  </p>
 
 </div>
