--- a/app/javascript/stylesheets/variables.scss
+++ b/app/javascript/stylesheets/variables.scss
@@ -17,7 +17,7 @@ $top-nav-height: 70px;
 
 // Customize Bootstrap variables.
 $secondary: $headers;
-$link-color: #555555;
+$link-color: #5555cc;
 
 // Recompile Bootstrap using the customized variables.
 @import '~bootstrap/scss/functions';
