--- a/app/views/activities/edit.html.erb
+++ b/app/views/activities/edit.html.erb
@@ -1,5 +1,8 @@
 <% @page_title = @activity.project.display_title %>
 <% @page_header = project_links(@activity.project) %>
-<%= render 'layouts/page-top' %>
+
+<% content_for :top_menu do %>
+  <%= link_to 'New activity', new_project_activity_path(@activity.project) %>
+<% end %>
 
 <%= render 'form' %>
