--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -1,5 +1,8 @@
 <% @page_title = @activity.project.display_title %>
 <% @page_header = project_links(@activity.project) %>
-<%= render 'layouts/page-top' %>
+
+<% content_for :top_menu do %>
+  <span>New activity</span>
+<% end %>
 
 <%= render 'form' %>
