--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,6 +1,7 @@
-<% @page_title = 'Edit User' %>
-<%= render 'layouts/page-top' %>
+<% @page_title = @user.display_name %>
+
+<% content_for :top_menu do %>
+  <%= link_to 'Users', admin_users_path %>
+<% end %>
 
 <%= render "form" %>
-
-<%= link_to "Back", admin_users_path %>
