--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,17 +1,19 @@
-<% @page_title = 'User' %>
-<%= render 'layouts/page-top' %>
+<% @page_title = @user.display_name %>
 
-  <%= tr_show :user, :first_name %>
-  <%= tr_show :user, :last_name %>
-  <%= tr_show :user, :email %>
-  <%= tr_show :user, :roles %>
+<% content_for :top_menu do %>
+  <%= link_to 'Users', admin_users_path %>
+<% end %>
 
-  <%= link_to "Edit", edit_admin_user_path(@user) %> |
-  <%= link_to "Back", admin_users_path %>
-  <% if is_admin? %>
-    | <%= link_to "Become #{@user.display_name}", become_admin_user_path(@user),
-          method: :post, remote: true %>
-  <% end %>
 
-  <p><%= button_to "Delete User", admin_user_path(@user),
-         data: { confirm: "Are you sure?" }, method: :delete %></p>
+<%= tr_show :user, :first_name %>
+<%= tr_show :user, :last_name %>
+<%= tr_show :user, :email %>
+<%= tr_show :user, :roles %>
+
+<%= link_to "Edit", edit_admin_user_path(@user) %> |
+
+<%= link_to "Become #{@user.display_name}", become_admin_user_path(@user),
+            method: :post, remote: true %>
+
+<p><%= button_to "Delete User", admin_user_path(@user),
+        data: { confirm: "Are you sure?" }, method: :delete %></p>
