--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -5,11 +5,11 @@
       <%= form.label :name %>
     </div>
     <div class="col-sm">
-      <%= form.text_field :name, autofocus: true %>
+      <%= form.text_field :name, autofocus: true, size: 40 %>
     </div>
   </div>
 
-  <% if @client.id %>
+  <% if @client.persisted? %>
 
     <input type="submit" value="Update client"
                          class="btn btn-secondary my-1 mr-1" >
