--- a/app/views/activities/_form.html.erb
+++ b/app/views/activities/_form.html.erb
@@ -7,7 +7,7 @@
     ) do |form| %>
 
   <div class="row my-2">
-    <div class="col-sm">
+    <div class="col-sm-3">
       <%= form.label :start, 'Start time' %><br />
     </div>
     <div class="col-sm-9">
@@ -19,11 +19,10 @@
     <div class="col-sm-3">
       <%= form.label :length, 'Length' %>
     </div>
-    <div class="col col-sm-9">
+    <div class="col-sm-9">
       <%= form.text_field :length,
         value: (@activity.length.to_i > 0) ? seconds_to_hm(@activity.length) : '',
-        placeholder: 'H:MM',
-        autofocus: true
+        placeholder: 'H:MM', autofocus: true
       %>
     </div>
 
